--- a/phonemvc.csproj
+++ b/phonemvc.csproj
@@ -7,16 +7,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="PhoneBook" Version="1.0.1" />
+    <PackageReference Include="phonebookghp" Version="1.0.0" />
+    <PackageReference Include="thephonebook" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
   </ItemGroup>
 
-   <ItemGroup>
-     <Reference Include="lib">
-       <HintPath>D:\lib\obj\Debug\netstandard2.0\lib.dll</HintPath>
-     </Reference>
-    </ItemGroup>
+   
 
 </Project>
