--- a/phonemvc.csproj
+++ b/phonemvc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="finaldll" Version="1.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
     <PackageReference Include="PhoneBook" Version="1.0.1" />
     <PackageReference Include="phonebookghp" Version="1.0.0" />
